# playingwithrust

./: .gitignore
2.0_guessing_game/src/: main.rs
RocketTest/: Cargo.toml  build.rs  rocket.db
RocketTest/src/: getter.rs  main.rs  models.rs  pages.rs  setter.rs  sql_func.rs
RocketTest/static/css/: styles.css
RocketTest/templates/: 404.html  addrow.html  addrow_component.html  content.html  index.html  topic_page.html
